examples/vbcmn15/fail/RymWxlF-WxlFRym.stl
/** reordWscR **/
global x,y; 
local l,m; 

/** Optimised **/ 
write(x,l); 
fenceSC; 
read(y,m); 

/** Unoptimised **/ 
read(y,m); 
write(x,l); 
fenceSC; 


